fix font clipping issue

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Helvetica;  
   font-size: 28px;
-  padding-top:22px;
+  padding-top:6px;
 }
 
 ol {
@@ -26,7 +26,7 @@ li#next {
 #next .time {
   display: block;
   font-size: 6em;
-  line-height: 80%;
+  margin-bottom: -0.1em;
 }
 
 li {
